--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongodb": "^2.2.36",
-    "mongoose": "^4.13.17"
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.16"
   },
   "devDependencies": {
-    "expect": "^1.20.2",
-    "mocha": "^3.5.3",
+    "jest": "^23.6.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
     "supertest": "^3.3.0"
   }
