--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mongoose": "^5.2.16"
   },
   "devDependencies": {
-    "jest": "^23.6.0",
+    "expect": "^21.2.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
     "supertest": "^3.3.0"
